--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "jose": "^5.8.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18"
@@ -25,6 +27,7 @@
     "postcss": "^8",
     "react-redux": "^9.1.2",
     "sass": "^1.77.8",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
