--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "cookie": "^0.6.0",
     "jose": "^5.8.0",
     "next": "14.2.6",
     "react": "^18",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/cookie": "^0.6.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
